--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "cookie-parser": "^1.4.7",
     "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
+    "csvtojson": "^2.0.10",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
     "express-ejs-layouts": "^2.5.1",
+    "express-session": "^1.18.1",
     "moment": "^2.30.1",
     "mongoose": "^8.8.0",
     "passport": "^0.7.0",
