--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.21.1",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.1",
+    "json2csv": "^6.0.0-alpha.2",
     "moment": "^2.30.1",
     "mongoose": "^8.8.0",
     "passport": "^0.5.0",
