--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "json2csv": "^6.0.0-alpha.2",
     "moment": "^2.30.1",
     "mongoose": "^8.8.0",
+    "nodemon": "^3.1.7",
     "passport": "^0.5.0",
     "passport-local": "^1.0.0"
   }
